Issue #20221: Removed conflicting (or circular) hypot definition when compiled with VS 2010 or above.  Initial patch by Tabrez Mohammed.